<resources>
    <string name="app_name">Kraftopia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend"><u>Resend</u></string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact US</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="feeds">Feeds</string>
    <string name="shop">Shop</string>
    <string name="order">Order</string>
    <string name="Rs">\u20B9</string>
</resources>